# Stocks

./: .env.example  .gitignore  CLAUDE.md  CLOUDFLARE_PAGES.md  CONTEXT.md  Cargo.toml  PROJECT_META.md  README.md  UBIQUITOUS_LANGUAGE.md  build_search_index.py  daily_summary_notify.py  daily_summary_structured.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  whop_summary.py  wrangler.toml  讨论区群组信息api.md
apps/trader-agent/backend/: README.md  pyproject.toml
apps/trader-agent/backend/app/: __init__.py  main.py
apps/trader-agent/backend/scripts/: dev_server.py  verify_backend.py
apps/trader-agent/backend/tests/: conftest.py  test_agent_events.py  test_agent_runtime_api.py  test_artifact_catalog.py  test_candidate_api.py  test_candidate_extractor.py  test_conflict_detector.py  test_context_api.py  test_context_selector.py  test_corpus_ingestion.py  test_corpus_search.py  test_cross_asset_correlation.py  test_db_bootstrap.py  test_evidence_ref.py  test_explanation_service.py  test_external_evidence_adapters.py  test_extract_preview.py  test_guided_paper_exploration.py  test_health.py  test_intel_alpha_vantage.py  test_intel_api_verification.py  test_intel_cache_market_ttl.py  test_intel_cache_report.py  test_intel_chart_bars.py  test_intel_d010_boundary.py  test_intel_market_ingest_symbol.py  test_intel_market_status.py  test_intel_news_crawler.py  test_intel_pattern_matcher.py  test_intel_phase0_schema.py  test_intel_phase4_context.py  test_intel_phase6_postmortem.py  (+38 more)
apps/trader-chart/: Cargo.toml  README.md
apps/trader-chart/src/: api.rs  app.rs  handoff.rs  intervals.rs  lib.rs  main.rs  model.rs  symbols.rs  viewport.rs
docs/: index.md  (+10 more)
(+1312 files in other folders)
