[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-agent-core"
version = "0.1.0"
description = "Agent Core Backend for the trader-agent monorepo subproject."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pandas>=2.2.3,<3",
  "pandas-market-calendars>=4.4.0,<6",
  "pydantic>=2.8,<3",
  "pyyaml>=6.0.2,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.30,<1",
  "yfinance>=0.2.40,<1"
]

[project.optional-dependencies]
longbridge = [
  "longbridge>=1.0.0,<2"
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "ruff>=0.8,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
